--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+48 111 111 111">+48 111 111 111</a></li>
+        <li><a href="tel:+48111111111">+48 111 111 111</a></li>
       </ul>
     </header>
 
