dodatkowe poprawki po spotkaniu z mentorem

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Agencja</title>
   </head>
   <body>
     <header>
-      <a href="/">WebStudio</a>
+      <a href="/">WebStudio ><span class="color-logo">Web</span>Studio</a>
+
       <nav>
         <!-- Nawigacja do innych stron -->
         <ul>
@@ -27,86 +28,125 @@
       <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
       <button type="button">Zamów usługę</button>
 
-      <h4>LOREM IPSUM</h4>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-        sem. Sed non sodales dui. Interdum et malesuada
-      </p>
+      <section>
+        <ul>
+          <li>
+            <h4>LOREM IPSUM</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h4>LOREM IPSUM</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h4>LOREM IPSUM</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h4>LOREM IPSUM</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+        </ul>
+      </section>
 
-      <h4>LOREM IPSUM</h4>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-        sem. Sed non sodales dui. Interdum et malesuada
-      </p>
+      <section>
+        <h2>Czym się zajmujemy</h2>
 
-      <h4>LOREM IPSUM</h4>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-        sem. Sed non sodales dui. Interdum et malesuada
-      </p>
+        <ul>
+          <li>
+            <img src="images/img.jpg" alt="laptop" width="370" height="294" />
+          </li>
+          <li>
+            <img
+              src="images/img(1).jpg"
+              alt="laptop i pilot"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="images/img(2).jpg"
+              alt="tablet/komórka"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
 
-      <h4>LOREM IPSUM</h4>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-        sem. Sed non sodales dui. Interdum et malesuada
-      </p>
+      <section>
+        <h2>Nasz zespół</h2>
 
-      <h2>Czym się zajmujemy</h2>
-
-      <img src="images/img.jpg" alt="laptop" width="370" height="294" />
-      <img
-        src="images/img(1).jpg"
-        alt="laptop i pilot"
-        width="370"
-        height="294"
-      />
-      <img
-        src="images/img(2).jpg"
-        alt="tablet/komórka"
-        width="370"
-        height="294"
-      />
-
-      <h2>Nasz zespół</h2>
-
-      <img
-        src="images/img(3).jpg"
-        alt="Product Designer"
-        width="270"
-        height="260"
-      />
-      <figure>
-        <figcaption>
-          <div>John Doe</div>
-          <p>Product Designer</p>
-        </figcaption>
-      </figure>
-      <img
-        src="images/img(4).jpg"
-        alt="Frontend Developer"
-        width="270"
-        height="260"
-      />
-      <figure>
-        <figcaption>
-          <div>John Doe</div>
-          <p>Frontend Developer</p>
-        </figcaption>
-      </figure>
-      <img src="images/img(5).jpg" alt="Marketing" width="270" height="260" />
-      <figure>
-        <figcaption>
-          <div>John Doe</div>
-          <p>Marketing</p>
-        </figcaption>
-      </figure>
-      <img src="images/img(6).jpg" alt="UI Designer" width="270" height="260" />
-      <figure>
-        <figcaption>
-          <div>John Doe</div>
-          <p>UI Designer</p>
-        </figcaption>
-      </figure>
+        <li>
+          <img
+            src="images/img(3).jpg"
+            alt="Product Designer"
+            width="270"
+            height="260"
+          />
+          <figure>
+            <figcaption>
+              <div>John Doe</div>
+              <p>Product Designer</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <img
+            src="images/img(4).jpg"
+            alt="Frontend Developer"
+            width="270"
+            height="260"
+          />
+          <figure>
+            <figcaption>
+              <div>John Doe</div>
+              <p>Frontend Developer</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <img
+            src="images/img(5).jpg"
+            alt="Marketing"
+            width="270"
+            height="260"
+          />
+          <figure>
+            <figcaption>
+              <div>John Doe</div>
+              <p>Marketing</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <img
+            src="images/img(6).jpg"
+            alt="UI Designer"
+            width="270"
+            height="260"
+          />
+          <figure>
+            <figcaption>
+              <div>John Doe</div>
+              <p>UI Designer</p>
+            </figcaption>
+          </figure>
+        </li>
+      </section>
     </main>
 
     <footer>
