--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -25,34 +25,37 @@
     </header>
 
     <main>
-      <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-      <button type="button">Zamów usługę</button>
+      <section>
+        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <button type="button">Zamów usługę</button>
+      </section>
 
       <section>
+        <h2>Dlaczego warto nas wybrać?</h2>
         <ul>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h3>LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h3>LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h3>LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h3>LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -97,12 +100,9 @@
               width="270"
               height="260"
             />
-            <figure>
-              <figcaption>
-                <div>John Doe</div>
-                <p>Product Designer</p>
-              </figcaption>
-            </figure>
+
+            <div>John Doe</div>
+            <p>Product Designer</p>
           </li>
           <li>
             <img
@@ -111,12 +111,9 @@
               width="270"
               height="260"
             />
-            <figure>
-              <figcaption>
-                <div>John Doe</div>
-                <p>Frontend Developer</p>
-              </figcaption>
-            </figure>
+
+            <div>John Doe</div>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img
@@ -125,12 +122,9 @@
               width="270"
               height="260"
             />
-            <figure>
-              <figcaption>
-                <div>John Doe</div>
-                <p>Marketing</p>
-              </figcaption>
-            </figure>
+
+            <div>John Doe</div>
+            <p>Marketing</p>
           </li>
           <li>
             <img
@@ -139,22 +133,20 @@
               width="270"
               height="260"
             />
-            <figure>
-              <figcaption>
-                <div>John Doe</div>
-                <p>UI Designer</p>
-              </figcaption>
-            </figure>
+
+            <div>John Doe</div>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
+      <a href="">WebStudio</a>
       <address>
+        <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+
         <ul>
-          <li><a href="">WebStudio</a></li>
-          <li>m. Warszawa, Aleje Jerozolimskie 21</li>
           <li><a href="mailto:info@example.com">info@example.com</a></li>
           <li><a href="tel:+48111111111">+48 111 111 111</a></li>
         </ul>
